add POC DAX M30 and backtest with backtrader

--- a/get_data/script_get_data.ipynb
+++ b/get_data/script_get_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +19,19 @@
     "import numpy as np\n",
     "import time\n",
     "from pathlib import Path\n",
+    "import matplotlib.pyplot as plt\n",
     "import get_data_alphavantage\n",
     "reload(get_data_alphavantage)\n",
     "from get_data_alphavantage import GetDataAlphaVantage\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH_DATA = \"../../Data/\""
    ]
   },
   {
@@ -33,92 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nom</th>\n",
-       "      <th>Symbole</th>\n",
-       "      <th>Dernier</th>\n",
-       "      <th>Var. %</th>\n",
-       "      <th>Cap. bour.</th>\n",
-       "      <th>Vol.</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>429</td>\n",
-       "      <td>429</td>\n",
-       "      <td>429</td>\n",
-       "      <td>429</td>\n",
-       "      <td>429</td>\n",
-       "      <td>429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>426</td>\n",
-       "      <td>427</td>\n",
-       "      <td>393</td>\n",
-       "      <td>267</td>\n",
-       "      <td>421</td>\n",
-       "      <td>374</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>Crédit Agricole</td>\n",
-       "      <td>SCHN</td>\n",
-       "      <td>0,00</td>\n",
-       "      <td>0,00%</td>\n",
-       "      <td>1,32B</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>88</td>\n",
-       "      <td>2</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    Nom Symbole Dernier Var. % Cap. bour. Vol.\n",
-       "count               429     429     429    429        429  429\n",
-       "unique              426     427     393    267        421  374\n",
-       "top     Crédit Agricole    SCHN    0,00  0,00%      1,32B    0\n",
-       "freq                  2       2       5     88          2   33"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "PATH_DATA = \"../../Data/\"\n",
     "pd.DataFrame()\n",
@@ -136,21 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hebus\\AppData\\Local\\Temp\\ipykernel_11424\\3593109810.py:1: PerformanceWarning: \n",
-      "your performance may suffer as PyTables will pickle object types that it cannot\n",
-      "map directly to c-types [inferred_type->mixed,key->block0_values] [items->Index(['Nom', 'Symbole', 'Dernier', 'Var. %', 'Cap. bour.', 'Vol.'], dtype='object')]\n",
-      "\n",
-      "  df_paris.to_hdf(PATH_DATA+\"list_paris_stocks.hdf\",key=\"Nom\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_paris.to_hdf(PATH_DATA+\"list_paris_stocks.hdf\",key=\"Nom\")\n",
     "df_paris.to_csv(PATH_DATA+\"list_paris_stocks.csv\",sep=\",\")"
@@ -158,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,47 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Try NRG.PAR\n",
-      "Try MLCVG.PAR\n",
-      "Try IMDA.PAR\n",
-      "Try EIFF.PAR\n",
-      "Try VIL.PAR\n",
-      "Try EXE.PAR\n",
-      "Try PERR.PAR\n",
-      "Try FDE.PAR\n",
-      "Try UFF.PAR\n",
-      "Try LIN.PA.PAR\n",
-      "Try MMT.PAR\n",
-      "Try TFI.PAR\n",
-      "Try FII.PAR\n",
-      "Try MAU.PAR\n",
-      "Try ELEC.PAR\n",
-      "Try EC.PAR\n",
-      "Try SCHP.PAR\n",
-      "Try LPE.PAR\n",
-      "Try LI.PAR\n",
-      "Try UBI.PAR\n",
-      "Try FLY.PAR\n",
-      "Try SESG.PAR\n",
-      "Try TKO.PAR\n",
-      "Try SCR.PAR\n",
-      "Try SBDG.PAR\n",
-      "ERROR  requesting for SBDG.PAR \n",
-      "Try AF.PAR\n",
-      "Try ALTA.PAR\n",
-      "Try POM.PAR\n",
-      "Try MMB.PAR\n",
-      "Try GDS.PAR\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_err = []\n",
     "group = 4\n",
@@ -263,87 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>168.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>11.005952</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>7.590963</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>5.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>10.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>16.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>30.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Unnamed: 0\n",
-       "count  168.000000\n",
-       "mean    11.005952\n",
-       "std      7.590963\n",
-       "min      0.000000\n",
-       "25%      5.000000\n",
-       "50%     10.000000\n",
-       "75%     16.000000\n",
-       "max     30.000000"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(0, 9):\n",
     "    path_csv = PATH_DATA+\"dl_alpha/symbol_err_\"+str(i)+\".csv\"\n",
@@ -366,67 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Symbol OK</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>225</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>225</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>2MX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Symbol OK\n",
-       "count        225\n",
-       "unique       225\n",
-       "top          2MX\n",
-       "freq           1"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dir_base = Path(PATH_DATA+\"dl_alpha\")\n",
     "list_ok = []\n",
@@ -454,21 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Try : Nicox\n",
-      "Try : Foncière Volta\n",
-      "Try : Actia Group\n",
-      "Try : Aroca Del Pinar\n",
-      "Try : Interparfums\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_res = pd.DataFrame()\n",
     "df_err = pd.DataFrame()\n",
@@ -497,6 +226,54 @@
     "df_err.to_csv(path_or_buf=PATH_DATA +\n",
     "              \"dl_alpha/symbol_not_found_\"+str(group)+\".csv\", sep=\",\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_TTE_w = pd.read_csv(PATH_DATA+\"dl_alpha/1w_adj/TTE.PAR_1w.csv\", sep=\",\",index_col=\"date\", parse_dates=True)\n",
+    "df_ATO_w = pd.read_csv(PATH_DATA+\"dl_alpha/1w_adj/ATO.PAR_1w.csv\", sep=\",\",index_col=\"date\", parse_dates=True)\n",
+    "print(df_TTE_w.head())\n",
+    "df_TTE_w.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(df_TTE_w[\"5. adjusted close\"], label=\"TTE\")\n",
+    "#df_TTE_w[\"5. adjusted close\"].plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_TTE_w[\"Symbol\"]=\"TTE\"\n",
+    "df_ATO_w[\"Symbol\"]=\"ATO\"\n",
+    "df_union_1w=pd.concat([df_TTE_w,df_ATO_w])\n",
+    "df_union_1w.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plt.plot(df_union_1w[\"5. adjusted close\"])\n",
+    "\n",
+    "#plt.show()\n",
+    "#df_union_1w.head()\n",
+    "df_union_1w.plot(y=\"5. adjusted close\")"
+   ]
   }
  ],
  "metadata": {
@@ -515,12 +292,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "588c4d5d0abde81a8ebfffdc736a46bcad9c5b92be7be13fb4e3cb13087ce002"
+    "hash": "a2896e4ce5f23ddda08fd9b416c5d713c4b6b1cabb7e607259e381c0ed43c6e3"
    }
   }
  },
