--- a/models/CW8/script_CW8.ipynb
+++ b/models/CW8/script_CW8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,10 +21,14 @@
     "import split_merge\n",
     "reload(split_merge)\n",
     "from split_merge import *\n",
+    "import model_mngr\n",
+    "reload(model_mngr)\n",
+    "from model_mngr import *\n",
     "\n",
     "from scipy.stats import uniform, randint\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import train_test_split,RandomizedSearchCV,cross_val_score,GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split,RandomizedSearchCV,cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn import metrics\n",
     "import pickle\n",
     "import joblib\n",
@@ -41,14 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "PATH_DATA = \"../../../Data/DTS_FULL/\"\n",
+    "PATH_MODEL = \"../../../Data/Models/\"\n",
     "symb=\"CW8\"\n",
     "dts_name=\"DCA_CLOSE_1D_V1\"\n",
-    "rnd_key=get_conf(\"RANDOM_KEY\")\n",
+    "rnd_key=int(get_conf(\"RANDOM_KEY\"))\n",
     "df=pd.DataFrame()\n",
     "if \"con\" in locals():\n",
     "    close_connection(con)\n",
@@ -56,8 +61,7 @@
     "df=get_candles_to_df(con=con, symbol=symb, only_close=True)\n",
     "df=add_indicators(con=con,df_in=df,dts_name=dts_name)\n",
     "df.sort_index(inplace = True)\n",
-    "df.round(5).to_csv(\n",
-    "    PATH_DATA+dts_name+\"_full.zip\", sep=\",\")"
+    "#df.round(5).to_csv(PATH_DATA+dts_name+\"_full.zip\", sep=\",\")"
    ]
   },
   {
@@ -70,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +83,8 @@
     "list_label = get_ind_list_by_type_for_dts(\n",
     "    con=con, dts_name=dts_name, symbol=symb, ind_type=2)\n",
     "dict_split = split_df_by_label_strat(\n",
-    "    df_in=df, list_label=list_label['LABEL'].tolist(), split_timeframe=\"Q\")\n"
+    "    df_in=df, list_label=list_label['LABEL'].tolist(), split_timeframe=\"Q\")\n",
+    "list_label\n"
    ]
   },
   {
@@ -91,18 +96,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#dict_split.keys()\n",
-    "lab_studied=\"lab_perf_21d\"\n",
+    "#lab_studied=\"lab_perf_21d\"\n",
+    "lab_studied=\"lab_perf_62d\"\n",
     "df_studied=\"df_\"+lab_studied\n",
     "df_selected=dict_split[df_studied+'_train']\n",
     "df_valid=dict_split[df_studied+'_valid']\n",
+    "df_confirm=dict_split[df_studied+'_confirm']\n",
     "list_feat = get_ind_list_by_type_for_dts(\n",
     "    con=con, dts_name=dts_name, symbol=symb, ind_type=1)\n",
     "list_feat=list_feat['LABEL'].tolist()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check data for each  label"
    ]
   },
   {
@@ -111,7 +126,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_selected.hist(figsize=(15,20))"
+    "for lab in list_label[\"LABEL\"].to_list():\n",
+    "    print(f\"label : \"+lab)\n",
+    "    print(df.loc[:,lab].dropna().iloc[[0,-1]])\n",
+    "(df.loc[:,list_label[\"LABEL\"]]).hist(figsize=(8,10))\n",
+    "#df_selected.hist(figsize=(15,20))"
    ]
   },
   {
@@ -123,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,48 +152,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestRegressor(max_depth=6, min_samples_leaf=5, n_estimators=180,\n",
-       "                      random_state=28)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestRegressor</label><div class=\"sk-toggleable__content\"><pre>RandomForestRegressor(max_depth=6, min_samples_leaf=5, n_estimators=180,\n",
-       "                      random_state=28)</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "RandomForestRegressor(max_depth=6, min_samples_leaf=5, n_estimators=180,\n",
-       "                      random_state=28)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rand_frst_clf_reg = RandomForestRegressor(n_estimators=180, bootstrap=True, criterion='squared_error',\n",
-    "                                          random_state=rnd_key, max_depth=6, min_samples_split=2, min_samples_leaf=5)\n",
-    "rand_frst_clf_reg.fit(df_x_train, col_y_train)"
+    "df_x_train.describe()\n",
+    "#col_y_train.describe()\n",
+    "#col_y_valid.describe()\n",
+    "# scaler = StandardScaler()\n",
+    "# print(type(col_y_train))\n",
+    "# col_y_train_norm = scaler.fit_transform(np.array(col_y_train).reshape(-1,1))\n",
+    "# col_y_train_norm=(pd.DataFrame(col_y_train_norm))[0]\n",
+    "# # col_y_train_norm.describe()\n",
+    "# print(col_y_train_norm[100:105])\n",
+    "# print(col_y_train[100:105])\n",
+    "\n",
+    "# col_y_compare=pd.merge(left=col_y_train,right=col_y_train_norm,how='left',left_index=True,right_index=True)\n",
+    "# col_y_compare.describe()\n",
+    "#col_y_train_norm"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy Random Forest :-30.321965718817047\n"
-     ]
-    }
-   ],
    "source": [
-    "y_pred_valid=rand_frst_clf_reg.predict(df_x_valid)\n",
-    "print(f\"Accuracy Random Forest regressor :{rand_frst_clf_reg.score(df_x_valid,col_y_valid)*100}\")"
+    "Hyperparameter tuning for Random Forest with random search CV"
    ]
   },
   {
@@ -183,42 +186,171 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "####################\n",
-    "# write it cleanly\n",
-    "####################\n",
-    "\n",
-    "n_estimators = [int(x) for x in np.linspace(start = 50, stop =200, num = 8)] # 178\n",
-    "max_features = ['sqrt']\n",
-    "max_depth = [int(x) for x in np.linspace(6, 15, num = 4)] #6\n",
-    "min_samples_split = [2, 5, 10, 15, 100] # 2\n",
-    "min_samples_leaf = [1, 2, 5, 10] # 5\n",
+    "n_estimators = [int(x) for x in np.linspace(start=50, stop=200, num=12)] # number of trees in the foreset\n",
+    "max_features = ['sqrt'] # max number of features considered for splitting a node\n",
+    "max_depth = [int(x) for x in np.linspace(2, 6, num=5)]# max number of levels in each decision tree\n",
+    "min_samples_split = np.linspace(0.1, 1.0, 10, endpoint=True)# min number of data points placed in a node before the node is split\n",
+    "min_samples_leaf = np.linspace(0.1, 0.5, 5, endpoint=True) #min number of data points allowed in a leaf node\n",
     "\n",
     "random_grid = {'n_estimators': n_estimators,\n",
-    "           'max_features': max_features,\n",
-    "           'max_depth': max_depth,\n",
-    "           'min_samples_split': min_samples_split,\n",
-    "           'min_samples_leaf': min_samples_leaf}\n",
-    "           \n",
-    "rf=RandomForestRegressor()\n",
+    "               'max_features': max_features,\n",
+    "               'max_depth': max_depth,\n",
+    "               'min_samples_split': min_samples_split,\n",
+    "               'min_samples_leaf': min_samples_leaf}\n",
     "\n",
-    "rf_random_trim = RandomizedSearchCV(estimator = rf,\n",
-    "                param_distributions = random_grid,\n",
-    "                #scoring='neg_mean_squared_error',\n",
-    "                n_iter = 100,\n",
-    "                cv = 3,\n",
-    "                verbose=1,\n",
-    "                random_state=28,\n",
-    "                n_jobs = 1)\n",
+    "rf = RandomForestRegressor()\n",
     "\n",
-    "rf_random_trim.fit(X_train_trim_reg,y_train_trim_reg)\n",
+    "rf_fitted = randomizedsearch_cv_fit_report(estimator=rf, param_distributions=random_grid, x_train=df_x_train, y_train=col_y_train, random_state=int(rnd_key), n_iter=200,n_top=5)\n",
     "\n",
-    "print(f\"Accuracy train quart :{rf_random_trim.score(X_train_trim_reg,y_train_trim_reg)*100}\")\n",
+    "#21 : n_estimators': 90, 'min_samples_split': 0.1, 'min_samples_leaf': 0.1, 'max_features': 'sqrt', 'max_depth': 6\n",
+    "#62 : 'n_estimators': 172, 'min_samples_split': 0.5, 'min_samples_leaf': 0.2, 'max_features': 'sqrt', 'max_depth': 5"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check parameters and test with validation dataset and show feature importance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rand_frst_reg = RandomForestRegressor(n_estimators=172, bootstrap=True, criterion=\"squared_error\",\n",
+    "                                          random_state=rnd_key, max_depth=5, min_samples_split=0.5, min_samples_leaf=0.2,max_features=\"sqrt\")\n",
+    "rand_frst_reg.fit(df_x_train, col_y_train)\n",
     "\n",
-    "print(f\"Accuracy test quart :{rf_random_trim.score(X_test_trim_reg,y_test_trim_reg)*100}\")\n",
     "\n",
-    "print(f\"Accuracy qualif quart :{rf_random_trim.score(X_cols_reg_valid,y_cols_reg_valid)*100}\")\n",
+    "print(f\"Training score : {rand_frst_reg.score(df_x_train, col_y_train)}\")\n",
     "\n",
-    "report_best_scores(rf_random_trim.cv_results_, 1)"
+    "y_pred_valid=rand_frst_reg.predict(df_x_valid)\n",
+    "print(f\"Random Forest regressor score:{rand_frst_reg.score(df_x_valid,col_y_valid)}\")\n",
+    "\n",
+    "feat_imp=rand_frst_reg.feature_importances_\n",
+    "std_feat_imp = np.std([tree.feature_importances_ for tree in rand_frst_reg.estimators_], axis=0)\n",
+    "pd.Series(feat_imp,index=df_x_train.columns).sort_values(ascending=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "save model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ext_pkl=\".pkl\"\n",
+    "rf_suffix=\"_rf_reg_v1\"\n",
+    "joblib.dump(rand_frst_reg,PATH_MODEL+symb+\"_\"+lab_studied+rf_suffix+ext_pkl)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same thing with XGBoost\n",
+    "Hyperparameter tuning for XGBoost with random search CV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 5 min 30 s !!\n",
+    "\n",
+    "random_grid = {\n",
+    "    \"colsample_bytree\": [x for x in np.linspace(0.5, 1, num=6)], # default 1 subsample ratio of columns when constructing each tree\n",
+    "    \"gamma\": [x for x in np.linspace(0, 0.1, num=3)], # default 0 minimum loss reduction to make a further patition on a leaf\n",
+    "    \"learning_rate\": [x for x in np.linspace(0.05, 0.2, num=8)], # default 0.1 \n",
+    "    \"max_depth\": [int(x) for x in np.linspace(2, 8, num=5)], # default 6 max depth of the tree\n",
+    "    \"n_estimators\": [int(x) for x in np.linspace(start=50, stop=200, num=7)], # default 100\n",
+    "    \"subsample\": [x for x in np.linspace(0.4, 1, num=6)], # default 1 subsample ratio of the training instances\n",
+    "    \"min_child_weight\": [x for x in np.linspace(0.8, 2, num=7)] # default 1 minimum sum of instance weight needed in a child\n",
+    "}\n",
+    "\n",
+    "xgb_reg = xgb.XGBRegressor()\n",
+    "\n",
+    "xgb_fitted = randomizedsearch_cv_fit_report(estimator=xgb_reg, param_distributions=random_grid, x_train=df_x_train, y_train=col_y_train, random_state=int(rnd_key), n_iter=200,n_top=5)\n",
+    "\n",
+    "#21 Parameters: {'subsample': 1.0, 'n_estimators': 125, 'min_child_weight': 1.0, 'max_depth': 2, 'learning_rate': 0.1142857142857143, 'gamma': 0.1, 'colsample_bytree': 0.7}\n",
+    "#21 {'subsample': 1.0, 'n_estimators': 75, 'min_child_weight': 1.4, 'max_depth': 6, 'learning_rate': 0.15714285714285717, 'gamma': 0.1, 'colsample_bytree': 0.6}\n",
+    "#62 'subsample': 1.0, 'n_estimators': 125, 'min_child_weight': 1.4, 'max_depth': 3, 'learning_rate': 0.05, 'gamma': 0.05, 'colsample_bytree': 1.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# avoir un gamma <=0.3 voire 0.1 et meme 0\n",
+    "\n",
+    "params = {\n",
+    "    \"learning_rate\": 0.05,\n",
+    "    \"subsample\": 1.0,\n",
+    "    \"gamma\": 0.05,\n",
+    "    \"colsample_bytree\":1.0,\n",
+    "    \"max_depth\":3,\n",
+    "    \"n_estimators\":125,\n",
+    "    \"min_child_weight\":1.4\n",
+    "}\n",
+    "\n",
+    "# params = {\n",
+    "#     \"learning_rate\": 0.11,\n",
+    "#     \"subsample\": 1.0,\n",
+    "#     \"gamma\": 0.1,\n",
+    "#     \"colsample_bytree\":0.7,\n",
+    "#     \"max_depth\":2,\n",
+    "#     \"n_estimators\":100,\n",
+    "#     \"min_child_weight\":1.0\n",
+    "# }\n",
+    "xgb_reg = xgb.XGBRegressor(random_state=int(rnd_key),\n",
+    "                                learning_rate=params['learning_rate'], subsample=params['subsample'], gamma=params['gamma'],\n",
+    "                                colsample_bytree=params['colsample_bytree'],max_depth=params['max_depth'],\n",
+    "                                n_estimators=params['n_estimators'],min_child_weight=params['min_child_weight'],verbosity=1)\n",
+    "\n",
+    "#xgb_reg=xgb.XGBRegressor()\n",
+    "xgb_reg.fit(df_x_train, col_y_train)\n",
+    "\n",
+    "print(f\"Training score : {xgb_reg.score(df_x_train, col_y_train)}\")\n",
+    "\n",
+    "#y_pred_valid = xgb_reg.predict(df_x_valid)\n",
+    "\n",
+    "print(f\"Accuracy XGBoost regressor Validation:{xgb_reg.score(df_x_valid,col_y_valid)}\")\n",
+    "\n",
+    "#print(xgb_reg.feature_importances_)\n",
+    "xgb.plot_importance(xgb_reg) \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ext_pkl=\".pkl\"\n",
+    "xgb_suffix=\"_xgb_reg_v1\"\n",
+    "joblib.dump(xgb_reg,PATH_MODEL+symb+\"_\"+lab_studied+xgb_suffix+ext_pkl)"
    ]
   }
  ],
