add drop_indicators_not_selected and dependencies

--- a/models/CW8/script_CW8.ipynb
+++ b/models/CW8/script_CW8.ipynb
@@ -63,7 +63,7 @@
     "    close_connection(con)\n",
     "con = get_connection()\n",
     "df = get_candles_to_df(con=con, symbol=symb, only_close=True)\n",
-    "df = add_indicators(con=con, df_in=df, dts_name=dts_name)\n",
+    "df = add_indicators_to_df(con=con, df_in=df, dts_name=dts_name)\n",
     "df.sort_index(inplace=True)\n",
     "#df.round(5).to_csv(PATH_DATA+dts_name+\"_full.zip\", sep=\",\")\n"
    ]
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "corr_train = df_x_train.corr()\n",
-    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "fig, ax = plt.subplots(figsize=(6, 6))\n",
     "corr_train.replace(1,0,inplace=True)\n",
     "corr_train=corr_train.applymap(lambda x : None if x< 0.9 and x>-0.9 else x)\n",
     "corr_train.dropna(axis=0,how='all',inplace=True)\n",
