creation of the first local pipeline pipe_CW8

--- a/backtest/bt_CW8_d1.ipynb
+++ b/backtest/bt_CW8_d1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(PATH_DATA_BT+\"DCA_CLOSE_1D_V1_lab_perf_21d_predict_BT.zip\", sep=\",\",\n",
+    "file_name=\"DCA_CLOSE_1D_21D_V1_lab_perf_21d_predict_lstm_v3_e_BT.zip\"\n",
+    "df = pd.read_csv(PATH_DATA_BT+file_name, sep=\",\",\n",
     "                            index_col=\"OPEN_DATETIME\", parse_dates=True, keep_default_na=True, low_memory=False)"
    ]
   },
@@ -42,7 +43,7 @@
    "source": [
     "prices=df[['open','high','low','close','volume','Predict','SL','TP']]\n",
     "prices[['SL','TP']]=0\n",
-    "prices=prices['2010-04-01 00:00:00':]\n",
+    "prices=prices['2010-04-01 00:00:00':] #start date of the backtest\n",
     "prices.dropna(inplace=True)\n",
     "prices.sort_index(inplace=True)\n",
     "prices.info()"
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,25 +64,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dca_params = {'score_buy': 0.00, 'score_sell': -10.005, 'size_buy': 2500, 'size_sell': 2500}\n",
+    "# Tune dca_params according your strategie\n",
+    "# dca_params = {'score_buy': 0.00, 'score_sell': -10.005, 'size_buy': 2500, 'size_sell': 2500} # BACKTEST FOR TRUE DCA CW8 REGRESSION SCORE\n",
+    "\n",
+    "# dca_params = {'score_buy': 2.00, 'score_sell': 0.00, 'size_buy': 2500, 'size_sell': 2500} # BACKTEST FOR CW8 LSTM CLASSIFICATION SCORE SCENARIO 1\n",
+    "# dca_params = {'score_buy': 2.00, 'score_sell': 0.50, 'size_buy': 2500, 'size_sell': 2500, 'reinvest_split':1} # BACKTEST FOR CW8 LSTM CLASSIFICATION SCORE SCENARIO 2\n",
+    "# dca_params = {'score_buy': 3.00, 'score_sell': 0.00, 'size_buy': 2500, 'size_sell': 2500} # BACKTEST FOR CW8 LSTM CLASSIFICATION SCORE SCENARIO 3\n",
+    "dca_params = {'score_buy': 1.00, 'score_sell': 0.00, 'size_buy': 2500, 'size_sell': 2500} # BACKTEST FOR CW8 LSTM CLASSIFICATION SCORE SCENARIO 4\n",
+    "# dca_params = {'score_buy': 1.00, 'score_sell': 0.50, 'size_buy': 2500, 'size_sell': 2500, 'reinvest_split':1} # BACKTEST FOR CW8 LSTM CLASSIFICATION SCORE SCENARIO 5\n",
+    "# dca_params = {'score_buy': 1.00, 'score_sell': 0.50, 'size_buy': 2500, 'size_sell': 2500, 'reinvest_split':2} # BACKTEST FOR CW8 LSTM CLASSIFICATION SCORE SCENARIO 6\n",
+    "# dca_params = {'score_buy': 2.00, 'score_sell': 0.50, 'size_buy': 2500, 'size_sell': 2500, 'reinvest_split':2} # BACKTEST FOR CW8 LSTM CLASSIFICATION SCORE SCENARIO 7\n",
+    "# dca_params = {'score_buy': 2.00, 'score_sell': 1.50, 'size_buy': 2500, 'size_sell': 2500, 'reinvest_split':1} # BACKTEST FOR CW8 LSTM CLASSIFICATION SCORE SCENARIO 8\n",
     "cerebro = bt.Cerebro(cheat_on_open=True)\n",
     "cerebro.addstrategy(strat.BtMlDcaStrategy,**dca_params)\n",
     "cerebro.adddata(data)\n",
     "cerebro.broker.setcash(1000000.0)\n",
-    "cerebro.broker.setcommission(commission=0.0025)\n",
+    "cerebro.broker.setcommission(commission=0.05) #0.5% commission !\n",
     "cerebro.addanalyzer(bt.analyzers.PyFolio, _name=\"pyfolio\")\n",
     "\n",
     "print(f\"Starting portfolio:{cerebro.broker.getvalue()}\")\n",
     "backtest_result=cerebro.run()\n",
     "print(f\"Ending portfolio:{cerebro.broker.getvalue()}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
