--- a/pipes/pipe_CW8_LSTM_class_sqlite.ipynb
+++ b/pipes/pipe_CW8_LSTM_class_sqlite.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Exception while closing Not an executable object: 'SELECT 1'\n",
+      "Exception while closing Not an executable object: 'SELECT 1'\n",
       " symb_yf='CW8.PA' dt_last_candle=Timestamp('2023-12-08 00:00:00') dt_delta=Timestamp('2023-12-05 00:00:00')\n"
      ]
     }
@@ -77,7 +79,7 @@
     "        sio.close_connection(con_fwk)\n",
     "con_fwk = sio.get_connection(str_db_path=PATH_DB_FWK)\n",
     "\n",
-    "symb_info=sio.get_symbol_info(symbol=symb)\n",
+    "symb_info=sio.get_symbol(symbol=symb)\n",
     "symb_yf=symb_info.CODE_YAHOO.iloc[0]#select first line\n",
     "\n",
     "dt_last_candle=sio.get_last_candle_date(con=con_cw8, symbol=symb,timeframe=timeframe) \n",
@@ -95,13 +97,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Exception while closing Not an executable object: 'SELECT 1'\n",
+      "Exception while closing Not an executable object: 'SELECT 1'\n",
       "         NB          MIN(OPEN_DATETIME)          MAX(OPEN_DATETIME)  \\\n",
       "MONTH                                                                 \n",
       "2023-12   6  2023-12-01 00:00:00.000000  2023-12-08 00:00:00.000000   \n",
@@ -139,49 +143,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    CODE       CLOSE\n",
-      "OPEN_DATETIME                       \n",
-      "2022-12-05 00:00:00  CW8  397.687897\n",
-      "2022-12-06 00:00:00  CW8  392.279999\n",
-      "2022-12-07 00:00:00  CW8  389.792511\n",
-      "2022-12-08 00:00:00  CW8  390.707306\n",
-      "2022-12-09 00:00:00  CW8  392.596985\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'HIGH'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Projets\\MarketDataEnrichment\\.env\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3629\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3628\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3629\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3630\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mc:\\Projets\\MarketDataEnrichment\\.env\\lib\\site-packages\\pandas\\_libs\\index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\Projets\\MarketDataEnrichment\\.env\\lib\\site-packages\\pandas\\_libs\\index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'HIGH'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Projets\\MarketDataEnrichment\\pipes\\pipe_CW8_LSTM_class_sqlite.ipynb Cell 9\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Projets/MarketDataEnrichment/pipes/pipe_CW8_LSTM_class_sqlite.ipynb#X30sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df \u001b[39m=\u001b[39m sio\u001b[39m.\u001b[39mget_candles_to_df(con\u001b[39m=\u001b[39mcon_cw8, symbol\u001b[39m=\u001b[39msymb,timeframe\u001b[39m=\u001b[39mtimeframe, only_close\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,date_start\u001b[39m=\u001b[39mdt_delta\u001b[39m-\u001b[39mtimedelta(days\u001b[39m=\u001b[39m\u001b[39m365\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Projets/MarketDataEnrichment/pipes/pipe_CW8_LSTM_class_sqlite.ipynb#X30sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(df\u001b[39m.\u001b[39mhead(\u001b[39m5\u001b[39m))\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Projets/MarketDataEnrichment/pipes/pipe_CW8_LSTM_class_sqlite.ipynb#X30sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m df_indic \u001b[39m=\u001b[39m indic\u001b[39m.\u001b[39;49madd_indicators_to_df(con\u001b[39m=\u001b[39;49mcon_fwk, df_in\u001b[39m=\u001b[39;49mdf, dts_name\u001b[39m=\u001b[39;49mdts_name)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Projets/MarketDataEnrichment/pipes/pipe_CW8_LSTM_class_sqlite.ipynb#X30sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m df_indic\u001b[39m.\u001b[39msort_index(inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Projets/MarketDataEnrichment/pipes/pipe_CW8_LSTM_class_sqlite.ipynb#X30sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m df_clean \u001b[39m=\u001b[39m indic\u001b[39m.\u001b[39mdrop_indicators_not_selected(con\u001b[39m=\u001b[39mcon_fwk, df_in\u001b[39m=\u001b[39mdf_indic, dts_name\u001b[39m=\u001b[39mdts_name, symbol\u001b[39m=\u001b[39msymb,label\u001b[39m=\u001b[39mlab_studied,algo\u001b[39m=\u001b[39mmodel_type,organize\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "File \u001b[1;32mC:\\Projets\\MarketDataEnrichment\\dataset_mngr\\add_indicators.py:64\u001b[0m, in \u001b[0;36madd_indicators_to_df\u001b[1;34m(con, df_in, dts_name)\u001b[0m\n\u001b[0;32m     61\u001b[0m df_list_ind \u001b[39m=\u001b[39m get_ind_for_dts(\n\u001b[0;32m     62\u001b[0m     con\u001b[39m=\u001b[39mcon, dts_name\u001b[39m=\u001b[39mdts_name, symbol\u001b[39m=\u001b[39mdf_comp[\u001b[39m'\u001b[39m\u001b[39mCODE\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m0\u001b[39m])\n\u001b[0;32m     63\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m df_list_ind\u001b[39m.\u001b[39mitertuples(index\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[1;32m---> 64\u001b[0m     df_comp[row\u001b[39m.\u001b[39mLABEL] \u001b[39m=\u001b[39m get_indicator_value(\n\u001b[0;32m     65\u001b[0m         df_in\u001b[39m=\u001b[39;49mdf_comp, indic_code\u001b[39m=\u001b[39;49mrow\u001b[39m.\u001b[39;49mPY_CODE)\n\u001b[0;32m     67\u001b[0m \u001b[39mreturn\u001b[39;00m df_comp\n",
-      "File \u001b[1;32mC:\\Projets\\MarketDataEnrichment\\dataset_mngr\\add_indicators.py:39\u001b[0m, in \u001b[0;36mget_indicator_value\u001b[1;34m(df_in, indic_code, sep)\u001b[0m\n\u001b[0;32m     35\u001b[0m                 exec_code \u001b[39m=\u001b[39m exec_code\u001b[39m.\u001b[39mreplace(\n\u001b[0;32m     36\u001b[0m                     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00msep\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00mcol\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00msep\u001b[39m}\u001b[39;00m\u001b[39m!\u001b[39m\u001b[39m{\u001b[39;00mcode\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00msep\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00mcol\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00msep\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mfiltered_df[\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mcode\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     38\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 39\u001b[0m         filtered_df[col] \u001b[39m=\u001b[39m df_in[col]\n\u001b[0;32m     40\u001b[0m         exec_code \u001b[39m=\u001b[39m exec_code\u001b[39m.\u001b[39mreplace(\n\u001b[0;32m     41\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00msep\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00mcol\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00msep\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mfiltered_df[\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mcol\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     43\u001b[0m exec_code \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mfiltered_df[\u001b[39m\u001b[39m'\u001b[39m\u001b[39mind_calculated\u001b[39m\u001b[39m'\u001b[39m\u001b[39m]=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39mexec_code\n",
-      "File \u001b[1;32mc:\\Projets\\MarketDataEnrichment\\.env\\lib\\site-packages\\pandas\\core\\frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3503\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3504\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3505\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3506\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3507\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32mc:\\Projets\\MarketDataEnrichment\\.env\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3631\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3629\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3630\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3631\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3632\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3633\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3634\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3635\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3636\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'HIGH'"
+      "Exception while closing Not an executable object: 'SELECT 1'\n",
+      "df.shape=(265, 7) df_indic.shape=(265, 53) df_clean.shape=(66, 23)\n"
      ]
     }
    ],
    "source": [
     "df = sio.get_candles_to_df(con=con_cw8, symbol=symb,timeframe=timeframe, only_close=False,date_start=dt_delta-timedelta(days=365))\n",
-    "print(df.head(5))\n",
+    "# print(df.head(5))\n",
     "df_indic = indic.add_indicators_to_df(con=con_fwk, df_in=df, dts_name=dts_name)\n",
     "df_indic.sort_index(inplace=True)\n",
     "\n",
@@ -204,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -233,11 +209,11 @@
       "\n",
       "       sma20_rsi14     ret_1d  pos_top50  pos_rsi14_sma5  aroon14_up  \\\n",
       "count    66.000000  66.000000  66.000000       66.000000   66.000000   \n",
-      "mean      0.001696   0.008134   0.857188       -0.019407    0.219114   \n",
-      "std       0.250645   0.079887   0.113877        0.276445    0.733767   \n",
-      "min      -0.335866  -0.215268   0.576370       -0.655690   -1.000000   \n",
-      "25%      -0.225427  -0.036796   0.797284       -0.162254   -0.384615   \n",
-      "50%      -0.063164   0.002737   0.864733       -0.033471    0.384615   \n",
+      "mean      0.001696   0.008134   0.857188       -0.019407    0.130536   \n",
+      "std       0.250645   0.079887   0.113877        0.276445    0.805756   \n",
+      "min      -0.335866  -0.215268   0.576370       -0.655690   -1.153846   \n",
+      "25%      -0.225427  -0.036796   0.797284       -0.162254   -0.538462   \n",
+      "50%      -0.063164   0.002737   0.864733       -0.033471    0.307692   \n",
       "75%       0.241701   0.063459   0.963063        0.104840    0.846154   \n",
       "max       0.478483   0.183537   1.000000        0.770256    1.000000   \n",
       "\n",
@@ -311,15 +287,15 @@
       "                            aroon14_up  stdev20_sma5  stdev20_1d     rsi14  \\\n",
       "OPEN_DATETIME                                                                \n",
       "2023-09-14 00:00:00           1.000000     -0.645424   -0.163620  0.514886   \n",
-      "2023-09-15 00:00:00           0.846154     -0.647201   -0.321982  0.381501   \n",
-      "2023-09-18 00:00:00           0.692308     -0.660012   -0.414657  0.240460   \n",
-      "2023-09-19 00:00:00           0.538462     -0.680105   -0.367012  0.120051   \n",
-      "2023-09-20 00:00:00           0.384615     -0.704249   -0.313367  0.181400   \n",
+      "2023-09-15 00:00:00           1.000000     -0.647201   -0.321982  0.381501   \n",
+      "2023-09-18 00:00:00           0.846154     -0.660012   -0.414657  0.240460   \n",
+      "2023-09-19 00:00:00           0.692308     -0.680105   -0.367012  0.120051   \n",
+      "2023-09-20 00:00:00           0.538462     -0.704249   -0.313367  0.181400   \n",
       "...                                ...           ...         ...       ...   \n",
-      "2023-12-04 00:00:00.000000    0.846154     -0.830370   -0.315604  0.529254   \n",
+      "2023-12-04 00:00:00.000000    1.000000     -0.830370   -0.315604  0.529254   \n",
       "2023-12-05 00:00:00.000000    1.000000     -0.834424   -0.080226  0.613053   \n",
       "2023-12-06 00:00:00.000000    1.000000     -0.832644    0.018781  0.642770   \n",
-      "2023-12-07 00:00:00.000000    1.000000     -0.821401   -0.022040  0.654874   \n",
+      "2023-12-07 00:00:00.000000    0.846154     -0.821401   -0.022040  0.654874   \n",
       "2023-12-08 00:00:00.000000    1.000000     -0.807553   -0.028965  0.744010   \n",
       "\n",
       "                            pos_sma50_200  pos_stdev20_sma5  \n",
@@ -359,27 +335,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2/2 [==============================] - 1s 9ms/step\n",
+      "2/2 [==============================] - 1s 5ms/step\n",
       "2023-11-17 00:00:00           4.0\n",
-      "2023-11-20 00:00:00           0.0\n",
-      "2023-11-21 00:00:00           0.0\n",
-      "2023-11-22 00:00:00           1.0\n",
+      "2023-11-20 00:00:00           3.0\n",
+      "2023-11-21 00:00:00           3.0\n",
+      "2023-11-22 00:00:00           3.0\n",
       "2023-11-23 00:00:00           3.0\n",
       "2023-11-24 00:00:00           3.0\n",
       "2023-11-27 00:00:00           1.0\n",
       "2023-11-27 00:00:00.000000    1.0\n",
       "2023-11-28 00:00:00           2.0\n",
-      "2023-11-28 00:00:00.000000    3.0\n",
-      "2023-11-29 00:00:00           3.0\n",
+      "2023-11-28 00:00:00.000000    2.0\n",
+      "2023-11-29 00:00:00           2.0\n",
       "2023-11-29 00:00:00.000000    3.0\n",
-      "2023-11-30 00:00:00           3.0\n",
+      "2023-11-30 00:00:00           0.0\n",
       "2023-11-30 00:00:00.000000    3.0\n",
       "2023-12-01 00:00:00.000000    3.0\n",
       "2023-12-04 00:00:00.000000    3.0\n",
