New organization of notebooks and models

--- a/notebooks/backtest/bt_prepa_paris_1d_class_lgbm.ipynb
+++ b/notebooks/backtest/bt_prepa_paris_1d_class_lgbm.ipynb
@@ -22,7 +22,7 @@
     "import importlib\n",
     "import joblib\n",
     "from typing import List\n",
-    "from sqlalchemy.orm import sessionmaker\n",
+    "from sqlalchemy.orm import Session, sessionmaker\n",
     "\n",
     "# Ensure project root is on sys.path for local imports\n",
     "PROJECT_ROOT = Path.cwd().resolve()\n",
@@ -31,29 +31,27 @@
     "if (PROJECT_ROOT / \"dataset_mngr\").exists():\n",
     "    sys.path.insert(0, str(PROJECT_ROOT))\n",
     "\n",
-    "import backtest_portfolio as port\n",
-    "import backtest_preparation as prep\n",
+    "from backtest import backtest_portfolio as port\n",
+    "from backtest import backtest_preparation as prep\n",
     "from dataset_mngr import db_models\n",
     "from dataset_mngr import sqlite_io as sio\n",
-    "from dataset_mngr.db_models import Scenario as ScenarioORM, Campaign as CampaignORM, Strategy as StrategyORM, Model as ModelORM, Indicator as IndicatorORM,CombiModels as CombiModelsORM\n",
-    "from sqlalchemy.orm import Session\n",
+    "from dataset_mngr.db_models import Scenario as ScenarioORM, Campaign as CampaignORM, Strategy as StrategyORM, Model as ModelORM, Indicator as IndicatorORM, CombiModels as CombiModelsORM\n",
     "\n",
     "importlib.reload(port)\n",
     "importlib.reload(prep)\n",
     "importlib.reload(sio)\n",
     "importlib.reload(db_models)\n",
     "\n",
-    "\n",
     "PATH_DATA = \"D:\\\\Projets\\\\Data\\\\\"\n",
-    "PATH_MODELS = PATH_DATA+\"Models\\\\LGBM\"\n",
-    "PATH_DB_FWK=PATH_DATA+\"\\\\sqlite\\\\dataset_market.db\"\n",
+    "PATH_MODELS = PATH_DATA + \"Models\\\\LGBM\"\n",
+    "PATH_DB_FWK = PATH_DATA + \"\\\\sqlite\\\\dataset_market.db\"\n",
     "\n",
     "if \"con_fwk\" in locals():\n",
-    "        sio.close_connection(con_fwk)\n",
+    "    sio.close_connection(con_fwk)\n",
     "con_fwk = sio.get_connection(str_db_path=PATH_DB_FWK)\n",
     "\n",
     "my_session_maker = sessionmaker(bind=con_fwk)\n",
-    "session=my_session_maker()"
+    "session = my_session_maker()"
    ]
   },
   {
@@ -407,6 +405,8 @@
     "    if not existing_sce:\n",
     "        sio.insert_object(session, ScenarioORM,scenario)\n",
     "        sce_orm = session.query(ScenarioORM).filter(ScenarioORM.code == scenario.code).first()\n",
+    "        if sce_orm is None:\n",
+    "            raise ValueError(f\"Scenario '{scenario.code}' was not persisted; cannot set scenario id.\")\n",
     "        scenario.id = sce_orm.sk_scenario\n",
     "        print(f\"Inserted scenario for strategy {scenario.strategy.name} into DB with id {scenario.id}\")\n",
     "    else:\n",
@@ -469,7 +469,7 @@
     "            date_start=str(my_campaign.params['date_start']),\n",
     "            date_end=str(my_campaign.params['date_end']),\n",
     "            unit_time='1D',\n",
-    "            log_file=remaining_portfolio.file_path,\n",
+    "            log_file=remaining_portfolio.file_path or \"\",\n",
     "            extra=remaining_portfolio.metrics\n",
     "        )\n",
     "        print(f\"Inserted BT_RESULT for scenario {sce.id} into DB with id {bt_result_orm.sk_bt_result}\")\n",
